// =============================================================================
// identity-service / identity_db
// Spring microservice database boundary: identity-service
//
// FK politikasi:
//   * Servis ICI iliskiler fiziksel FOREIGN KEY ile kurulur ('ref:' notasyonu).
//   * Outbox tablosunun 'aggregateId' alani heterojen aggregate tiplerini
//     tutabildigi icin FIZIKSEL FK kurulmaz (soft reference).
//   * Servis DISI referans bu serviste yoktur (identity-service kok servistir).
// =============================================================================

Table IDENTITY_SERVICE_USER {
  id uuid [primary key]
  email varchar [unique, not null]
  passwordHash varchar [not null]
  status varchar [note: 'ACTIVE | LOCKED | DISABLED']
  createdAt timestamp
  updatedAt timestamp
}

Table IDENTITY_SERVICE_ROLE {
  id uuid [primary key]
  name varchar [unique, not null]
  description varchar
}

Table IDENTITY_SERVICE_PERMISSION {
  id uuid [primary key]
  code varchar [unique, not null]
  description varchar
}

Table IDENTITY_SERVICE_USER_ROLE {
  userId uuid [not null]
  roleId uuid [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table IDENTITY_SERVICE_ROLE_PERMISSION {
  roleId uuid [not null]
  permissionId uuid [not null]

  indexes {
    (roleId, permissionId) [pk]
  }
}

Table IDENTITY_SERVICE_REFRESH_TOKEN {
  id uuid [primary key]
  userId uuid [not null]
  tokenHash varchar [not null]
  expiresAt timestamp
  revokedAt timestamp
  createdAt timestamp
}

Table IDENTITY_SERVICE_AUDIT_LOG {
  id uuid [primary key]
  actorUserId uuid
  action varchar
  entityType varchar
  entityId uuid
  oldValueJson jsonb
  newValueJson jsonb
  correlationId varchar
  createdAt timestamp
}

Table IDENTITY_SERVICE_OUTBOX_EVENT {
  id uuid [primary key]
  aggregateId uuid [note: 'soft ref - heterojen aggregate tipleri, FK YOK']
  aggregateType varchar
  eventType varchar
  payloadJson jsonb
  status varchar [note: 'PENDING | PUBLISHED | FAILED']
  createdAt timestamp
  publishedAt timestamp
}

Table IDENTITY_SERVICE_PROCESSED_EVENT {
  id uuid [primary key]
  eventId uuid [unique]
  eventType varchar
  sourceService varchar
  aggregateId uuid
  processedAt timestamp
  status varchar [note: 'PROCESSED | FAILED']
  errorMessage varchar
  createdAt timestamp
}

// --- Servis ici fiziksel FK iliskileri ---
Ref identity_user_roles_user:        IDENTITY_SERVICE_USER_ROLE.userId            > IDENTITY_SERVICE_USER.id          // N-1, physical FK
Ref identity_user_roles_role:        IDENTITY_SERVICE_USER_ROLE.roleId            > IDENTITY_SERVICE_ROLE.id          // N-1, physical FK; USER M-N ROLE
Ref identity_role_permissions_role:  IDENTITY_SERVICE_ROLE_PERMISSION.roleId      > IDENTITY_SERVICE_ROLE.id          // N-1, physical FK
Ref identity_role_permissions_perm:  IDENTITY_SERVICE_ROLE_PERMISSION.permissionId > IDENTITY_SERVICE_PERMISSION.id    // N-1, physical FK; ROLE M-N PERMISSION
Ref identity_refresh_tokens_user:    IDENTITY_SERVICE_REFRESH_TOKEN.userId        > IDENTITY_SERVICE_USER.id          // N-1, physical FK
Ref identity_audit_log_actor:        IDENTITY_SERVICE_AUDIT_LOG.actorUserId       > IDENTITY_SERVICE_USER.id          // N-1, physical FK (nullable - system actions)
